# EventCart

./: .env.example  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py
apps/api/scripts/: seed.py
apps/api/src/eventcart/: main.py
apps/api/src/eventcart/api/: auth.py  health.py  orders.py  payments.py  products.py
apps/api/src/eventcart/core/: deps.py  logging.py  security.py  settings.py
apps/api/src/eventcart/db/: session.py
apps/api/src/eventcart/models/: idempotency.py  order.py  order_item.py  outbox.py  product.py  session.py  user.py
apps/api/src/eventcart/repo/: idempotency_repo.py  order_repo.py  outbox_repo.py  product_repo.py  session_repo.py  user_repo.py
apps/api/src/eventcart/schemas/: auth.py  common.py  order.py  product.py
apps/api/src/eventcart/scripts/: seed.py
apps/api/src/eventcart/services/: auth_service.py  order_service.py  outbox_service.py  payment_service.py  processor.py
apps/api/tests/: conftest.py  test_idempotency.py  test_outbox_integration.py
apps/web/: Dockerfile  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/cart/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/orders/: page.tsx
apps/web/app/products/: page.tsx
apps/web/components/: Providers.tsx  auth-context.tsx  cart-context.tsx  site-nav.tsx
apps/web/lib/: api.ts
apps/worker/: Dockerfile  pyproject.toml
infra/: README.md
migrations/: README.md
scripts/: seed.py
(+7 files in other folders)
